--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
     margin: 0; 
     padding: 0; 
     font-family: 'Poppins', sans-serif;
- };
+ }
 
 body { 
     background: #f5f7fa; 
     color: #333; 
     line-height: 1.6;
- };
+ }
 
 .container {
      max-width: 900px; 
@@ -18,7 +18,7 @@ body {
      padding: 30px; 
      border-radius: 12px; 
      box-shadow: 0 4px 12px rgba(0,0,0,0.1); 
-    };
+    }
 
 h1 {
     color: blueviolet;
@@ -80,11 +80,11 @@ footer p span{
     justify-content: flex-end;
     align-items: flex-end;
     margin-bottom: 15px;
-    padding: 30px;
+    padding: 15px; 
 }
 
 @media (max-width: 768px) {
-  header h1 {
+   h1 {
     font-size: 22px;
   }
   section {
@@ -93,9 +93,9 @@ footer p span{
 }
 
 @media (max-width: 480px) {
-  header .contact a {
-    display: inline-block;
-    margin: 5px;
-    font-size: 18px;
+   .contact a {
+      display: inline-block;
+      margin: 5px;
+      font-size: 18px;
   }
 }
